--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "ntask-api",
   "version": "1.0.0",
-  "description": "\"API de gestão de tarefas\"",
+  "description": "API de gestão de tarefas",
   "main": "index.js",
   "scripts": {
     "start": "babel-node index.js"
   },
   "author": "Elton Andrade",
   "dependencies": {
+    "babel": "^6.23.0",
     "babel-cli": "^6.5.1",
     "babel-preset-es2015": "^6.5.0",
     "consign": "^0.1.2",
-    "express": "^4.13.4"
+    "express": "^4.17.1",
+    "node-sass": "^4.13.0",
+    "sequelize": "^3.9.0",
+    "sqlite3": "^4.1.0"
   }
 }
