--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel": "^6.23.0",
     "babel-cli": "^6.5.1",
     "babel-preset-es2015": "^6.5.0",
+    "body-parser": "^1.15.0",
     "consign": "^0.1.2",
     "express": "^4.17.1",
     "node-sass": "^4.13.0",
